--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ranabo1234vin.github.io/medistart",
+  "homepage": "https://ranabo1234vin.github.io/medistart/",
   "name": "medistart",
   "private": true,
   "version": "0.0.0",
